@@ -16,6 +16,9 @@
 /***************************************************************************/
 /* Options */
 
+/* Undefine to use builtin lowpass filter/resampling code, way less quality though, and also not faster anymore */
+#define USE_LIBSAMPLERATE
+
 /* Undefine it to turn off clipping (helpful to find cases where we max out */
 #define MIXER_USE_CLIPPING
 
@@ -24,6 +27,14 @@
 
 /***************************************************************************/
 /* Config */
+
+#ifdef USE_LIBSAMPLERATE
+ #include "..\..\ext\libsamplerate\samplerate.h"
+ #include "..\..\ext\libsamplerate\samplerate.c"
+ #include "..\..\ext\libsamplerate\src_linear.c"
+ #include "..\..\ext\libsamplerate\src_sinc_opt.c"
+ #include "..\..\ext\libsamplerate\src_zoh.c"
+#endif
 
 /* Internal log */
 #ifdef MIXER_USE_LOGERROR
@@ -71,19 +82,9 @@ struct mixer_channel_data
 	unsigned samples_available;
 
 	/* resample state */
-	int frac; /* resample fixed point state (used if filter is not active) */
-	int pivot; /* resample brehesnam state (used if filter is active) */
-	int step; /* fixed point increment */
 	unsigned from_frequency; /* current source frequency */
 	unsigned to_frequency; /* current destination frequency */
-	unsigned lowpass_frequency; /* current lowpass arbitrary cut frequency, 0 if default */
-	filter* filter; /* filter used, ==0 if none */
-	filter_state* left; /* state of the filter for the left/mono channel */
-	filter_state* right; /* state of the filter for the right channel */
 	int is_reset_requested; /* state reset requested */
-
-	/* lowpass filter request */
-	unsigned request_lowpass_frequency; /* request for the lowpass arbitrary cut frequency, 0 if default */
 
 	/* state of non-streamed playback */
 	int is_stream;
@@ -93,6 +94,23 @@ struct mixer_channel_data
 	void* data_start;
 	void* data_end;
 	void* data_current;
+
+#ifdef USE_LIBSAMPLERATE
+	SRC_STATE* src_left;
+	SRC_STATE* src_right;
+#else
+	int frac; /* resample fixed point state (used if filter is not active) */
+	int pivot; /* resample brehesnam state (used if filter is active) */
+	int step; /* fixed point increment */
+
+	/* lowpass filter request */
+	unsigned request_lowpass_frequency; /* request for the lowpass arbitrary cut frequency, 0 if default */
+	unsigned lowpass_frequency; /* current lowpass arbitrary cut frequency, 0 if default */
+
+	filter* filter; /* filter used, ==0 if none */
+	filter_state* left; /* state of the filter for the left/mono channel */
+	filter_state* right; /* state of the filter for the right channel */
+#endif
 };
 
 /* channel data */
@@ -107,6 +125,11 @@ static int is_stereo;
 static unsigned accum_base;
 static int left_accum[ACCUMULATOR_SAMPLES];
 static int right_accum[ACCUMULATOR_SAMPLES];
+
+#ifdef USE_LIBSAMPLERATE
+static float in_f[ACCUMULATOR_SAMPLES*25]; //!! 25=magic, should be able to handle all cases where src sample rate is far far larger than dst sample rate (e.g. 4x48000 -> 8000)
+static float out_f[ACCUMULATOR_SAMPLES];
+#endif
 
 /* 16-bit mix buffers */
 static INT16 mix_buffer[ACCUMULATOR_SAMPLES*2]; /* *2 for stereo */
@@ -131,12 +154,19 @@ static unsigned samples_this_frame;
 	lowpass_frequency - lowpass frequency, use 0 to automatically compute it from the resample operation
 	restart - restart the resample state
 */
-static void mixer_channel_resample_set(struct mixer_channel_data *channel, unsigned from_frequency, unsigned lowpass_frequency, int restart)
+static void mixer_channel_resample_set(struct mixer_channel_data *channel, unsigned from_frequency,
+#ifndef USE_LIBSAMPLERATE
+	unsigned lowpass_frequency,
+#endif
+	int restart)
 {
 	unsigned to_frequency;
 	to_frequency = Machine->sample_rate;
 
-	mixerlogerror(("Mixer:mixer_channel_resample_set(%s,%d,%d)\n",channel->name,from_frequency,lowpass_frequency,restart));
+#ifdef USE_LIBSAMPLERATE
+	mixerlogerror(("Mixer:mixer_channel_resample_set(%s,%d,%d)\n", channel->name, from_frequency, restart));
+#else
+	mixerlogerror(("Mixer:mixer_channel_resample_set(%s,%d,%d,%d)\n", channel->name, from_frequency, lowpass_frequency, restart));
 
 	if (restart)
 	{
@@ -185,17 +215,28 @@ static void mixer_channel_resample_set(struct mixer_channel_data *channel, unsig
 	}
 
 	channel->lowpass_frequency = lowpass_frequency;
+	channel->step = ((unsigned long long)from_frequency << FRACTION_BITS) / to_frequency;
+#endif
+
 	channel->from_frequency = from_frequency;
 	channel->to_frequency = to_frequency;
-	channel->step = ((unsigned long long)from_frequency << FRACTION_BITS) / to_frequency;
 
 	/* reset the filter state */
-	if (channel->filter && channel->is_reset_requested)
+	if (
+#ifndef USE_LIBSAMPLERATE
+		channel->filter &&
+#endif
+		channel->is_reset_requested)
 	{
 		mixerlogerror(("\tstate clear\n"));
 		channel->is_reset_requested = 0;
+#ifdef USE_LIBSAMPLERATE
+		src_reset(channel->src_left);
+		src_reset(channel->src_right);
+#else
 		filter_state_reset(channel->filter,channel->left);
 		filter_state_reset(channel->filter,channel->right);
+#endif
 	}
 }
 
@@ -208,7 +249,13 @@ static void mixer_channel_resample_set(struct mixer_channel_data *channel, unsig
 	src - source vector, (updated at the exit)
 	src_len - max number of source samples
 */
-static unsigned mixer_channel_resample_16(struct mixer_channel_data* channel, filter_state* state, int volume, int* dst, unsigned dst_len, INT16** psrc, unsigned src_len)
+static unsigned mixer_channel_resample_16(struct mixer_channel_data* channel,
+#ifdef USE_LIBSAMPLERATE
+	SRC_STATE* src_state,
+#else
+	filter_state* state,
+#endif
+	int volume, int* dst, unsigned dst_len, INT16** psrc, unsigned src_len)
 {
 	unsigned dst_base = (accum_base + channel->samples_available) & ACCUMULATOR_MASK;
 	unsigned dst_pos = dst_base;
@@ -217,59 +264,100 @@ static unsigned mixer_channel_resample_16(struct mixer_channel_data* channel, fi
 
 	assert( dst_len <= ACCUMULATOR_MASK );
 
-	if (!channel->filter)
+#ifdef USE_LIBSAMPLERATE
+	assert( src_len <= ACCUMULATOR_MASK*25 ); //!! magic see in_f
+
+	SRC_DATA data;
+
+	if (src_len == 0 || dst_len == 0)
+		return 0;
+#endif
+
+	if (channel->from_frequency == channel->to_frequency) // raw copy, no filtering
 	{
-		if (channel->from_frequency == channel->to_frequency)
-		{
-			/* copy */
-			unsigned len;
-			INT16* src_end;
-			if (src_len > dst_len)
-				len = dst_len;
-			else
-				len = src_len;
+		unsigned len;
+		INT16* src_end;
+		if (src_len > dst_len)
+			len = dst_len;
+		else
+			len = src_len;
 
 #ifdef X86_ASM /* this is very hardware dependant */
-			/* optimized version (a small but measurable speedup) */
-			while (len) {
-				unsigned run;
-				int* rundst;
+		/* optimized version (a small but measurable speedup) */
+		while (len) {
+			unsigned run;
+			int* rundst;
 
-				run = ACCUMULATOR_MASK + 1 - dst_pos;
-				if (run > len)
-					run = len;
-				len -= run;
+			run = ACCUMULATOR_MASK + 1 - dst_pos;
+			if (run > len)
+				run = len;
+			len -= run;
 
-				src_end = src + (run & 3);
-				while (src != src_end) {
-					dst[dst_pos] += (*src * volume) >> 8;
-					dst_pos = (dst_pos + 1) & ACCUMULATOR_MASK;
-					++src;
-				}
-
-				rundst = dst + dst_pos;
-				src_end = src + (run & ~3);
-				dst_pos = (dst_pos + (run & ~3)) & ACCUMULATOR_MASK;
-				while (src != src_end) {
-					rundst[0] += (src[0] * volume) >> 8;
-					rundst[1] += (src[1] * volume) >> 8;
-					rundst[2] += (src[2] * volume) >> 8;
-					rundst[3] += (src[3] * volume) >> 8;
-					rundst += 4;
-					src += 4;
-				}
-			}
-#else
-			/* reference version */
-			src_end = src + len;
-			while (src != src_end)
-			{
+			src_end = src + (run & 3);
+			while (src != src_end) {
 				dst[dst_pos] += (*src * volume) >> 8;
 				dst_pos = (dst_pos + 1) & ACCUMULATOR_MASK;
 				++src;
 			}
+
+			rundst = dst + dst_pos;
+			src_end = src + (run & ~3);
+			dst_pos = (dst_pos + (run & ~3)) & ACCUMULATOR_MASK;
+			while (src != src_end) {
+				rundst[0] += (src[0] * volume) >> 8;
+				rundst[1] += (src[1] * volume) >> 8;
+				rundst[2] += (src[2] * volume) >> 8;
+				rundst[3] += (src[3] * volume) >> 8;
+				rundst += 4;
+				src += 4;
+			}
+		}
+#else
+		/* reference version */
+		src_end = src + len;
+		while (src != src_end)
+		{
+			dst[dst_pos] += (*src * volume) >> 8;
+			dst_pos = (dst_pos + 1) & ACCUMULATOR_MASK;
+			++src;
+		}
 #endif
-		} else {
+
+		*psrc = src;
+		return (dst_pos - dst_base) & ACCUMULATOR_MASK;
+	}
+
+#ifdef USE_LIBSAMPLERATE
+	src_short_to_float_array(src, in_f, src_len); //!! opt.?
+
+	data.data_in = in_f;
+	data.data_out = out_f;
+	data.input_frames = src_len;
+	data.output_frames = dst_len;
+	data.end_of_input = 0;
+	data.src_ratio = (double)channel->to_frequency/channel->from_frequency;
+
+	src_process(src_state, &data);
+
+	for (unsigned int i = 0; i < data.output_frames_gen; ++i) //!! opt.?
+	{
+		double scaled_value = out_f[i] * (8.0 * 0x10000000);
+		if (CPU_CLIPS_POSITIVE == 0 && scaled_value >= (1.0 * 0x7FFFFFFF))
+			dst[dst_pos] += (32767 * volume) >> 8;
+		else if (CPU_CLIPS_NEGATIVE == 0 && scaled_value <= (-8.0 * 0x10000000))
+			dst[dst_pos] += (-32768 * volume) >> 8;
+		else
+			dst[dst_pos] += ((lrint(scaled_value) >> 16) * volume) >> 8;
+		dst_pos = (dst_pos + 1) & ACCUMULATOR_MASK;
+	}
+
+	*psrc = src+data.input_frames_used;
+	return (dst_pos - dst_base) & ACCUMULATOR_MASK;
+
+#else
+
+	if (!channel->filter)
+	{
 			/* end address */
 			INT16* src_end = src + src_len;
 			unsigned dst_pos_end = (dst_pos + dst_len) & ACCUMULATOR_MASK;
@@ -295,7 +383,6 @@ static unsigned mixer_channel_resample_16(struct mixer_channel_data* channel, fi
 			}
 
 			channel->frac = frac;
-		}
 	} else if (!channel->from_frequency) {
 		dst_pos = (dst_pos + dst_len) & ACCUMULATOR_MASK;
 	} else {
@@ -357,11 +444,17 @@ static unsigned mixer_channel_resample_16(struct mixer_channel_data* channel, fi
 	}
 
 	*psrc = src;
-
 	return (dst_pos - dst_base) & ACCUMULATOR_MASK;
+#endif
 }
 
-static unsigned mixer_channel_resample_8(struct mixer_channel_data *channel, filter_state* state, int volume, int* dst, unsigned dst_len, INT8** psrc, unsigned src_len)
+static unsigned mixer_channel_resample_8(struct mixer_channel_data *channel,
+#ifdef USE_LIBSAMPLERATE
+	SRC_STATE* src_state,
+#else
+	filter_state* state,
+#endif
+	int volume, int* dst, unsigned dst_len, INT8** psrc, unsigned src_len)
 {
 	unsigned dst_base = (accum_base + channel->samples_available) & ACCUMULATOR_MASK;
 	unsigned dst_pos = dst_base;
@@ -370,27 +463,69 @@ static unsigned mixer_channel_resample_8(struct mixer_channel_data *channel, fil
 
 	assert( dst_len <= ACCUMULATOR_MASK );
 
+#ifdef USE_LIBSAMPLERATE
+	assert(src_len <= ACCUMULATOR_MASK * 25); //!! magic see in_f
+
+	SRC_DATA data;
+
+	if (src_len == 0 || dst_len == 0)
+		return 0;
+#endif
+
+	if (channel->from_frequency == channel->to_frequency)
+	{
+		/* copy */
+		unsigned len;
+		INT8* src_end;
+		if (src_len > dst_len)
+			len = dst_len;
+		else
+			len = src_len;
+
+		src_end = src + len;
+		while (src != src_end)
+		{
+			dst[dst_pos] += *src * volume;
+			dst_pos = (dst_pos + 1) & ACCUMULATOR_MASK;
+			++src;
+		}
+
+		*psrc = src;
+		return (dst_pos - dst_base) & ACCUMULATOR_MASK;
+	}
+
+#ifdef USE_LIBSAMPLERATE
+	src_char_to_float_array(src, in_f, src_len); //!! opt.?
+
+	data.data_in = in_f;
+	data.data_out = out_f;
+	data.input_frames = src_len;
+	data.output_frames = dst_len;
+	data.end_of_input = 0;
+	data.src_ratio = (double)channel->to_frequency / channel->from_frequency;
+
+	src_process(src_state, &data);
+
+	for (unsigned int i = 0; i < data.output_frames_gen; ++i) //!! opt.?
+	{
+		double scaled_value = out_f[i] * (8.0 * 0x10000000);
+		if (CPU_CLIPS_POSITIVE == 0 && scaled_value >= (1.0 * 0x7FFFFFFF))
+			dst[dst_pos] += (32767 * volume) >> 8;
+		else if (CPU_CLIPS_NEGATIVE == 0 && scaled_value <= (-8.0 * 0x10000000))
+			dst[dst_pos] += (-32768 * volume) >> 8;
+		else
+			dst[dst_pos] += ((lrint(scaled_value) >> 16) * volume) >> 8;
+		dst_pos = (dst_pos + 1) & ACCUMULATOR_MASK;
+	}
+
+	*psrc = src + data.input_frames_used;
+	return (dst_pos - dst_base) & ACCUMULATOR_MASK;
+
+#else
+
 	if (!channel->filter)
 	{
-		if (channel->from_frequency == channel->to_frequency)
-		{
-			/* copy */
-			unsigned len;
-			INT8* src_end;
-			if (src_len > dst_len)
-				len = dst_len;
-			else
-				len = src_len;
-
-			src_end = src + len;
-			while (src != src_end)
-			{
-				dst[dst_pos] += *src * volume;
-				dst_pos = (dst_pos + 1) & ACCUMULATOR_MASK;
-				++src;
-			}
-		} else {
-			/* end address */
+		 	/* end address */
 			INT8* src_end = src + src_len;
 			unsigned dst_pos_end = (dst_pos + dst_len) & ACCUMULATOR_MASK;
 
@@ -415,7 +550,6 @@ static unsigned mixer_channel_resample_8(struct mixer_channel_data *channel, fil
 			}
 
 			channel->frac = frac;
-		}
 	} else if (!channel->from_frequency) {
 		dst_pos = (dst_pos + dst_len) & ACCUMULATOR_MASK;
 	} else {
@@ -467,8 +601,8 @@ static unsigned mixer_channel_resample_8(struct mixer_channel_data *channel, fil
 	}
 
 	*psrc = src;
-
 	return (dst_pos - dst_base) & ACCUMULATOR_MASK;
+#endif
 }
 
 /* Mix a 8 bit channel */
@@ -494,21 +628,33 @@ static unsigned mixer_channel_resample_8_pan(struct mixer_channel_data *channel,
 	}
 #endif
 
+#ifdef USE_LIBSAMPLERATE
+	SRC_STATE *cl = channel->src_left;
+	SRC_STATE *cr = channel->src_right;
+#else
+	filter_state *cl = channel->left;
+	filter_state *cr = channel->right;
+#endif
+
 	if (!is_stereo || channel->pan == MIXER_PAN_LEFT) {
-		count = mixer_channel_resample_8(channel, channel->left, volume[0], left_accum, dst_len, src, src_len);
+		count = mixer_channel_resample_8(channel, cl, volume[0], left_accum, dst_len, src, src_len);
 	} else if (channel->pan == MIXER_PAN_RIGHT) {
-		count = mixer_channel_resample_8(channel, channel->right, volume[1], right_accum, dst_len, src, src_len);
+		count = mixer_channel_resample_8(channel, cr, volume[1], right_accum, dst_len, src, src_len);
 	} else {
 		/* save */
+#ifndef USE_LIBSAMPLERATE
 		unsigned save_pivot = channel->pivot;
 		unsigned save_frac = channel->frac;
+#endif
 		INT8* save_src = *src;
-		count = mixer_channel_resample_8(channel, channel->left, volume[0], left_accum, dst_len, src, src_len);
+		count = mixer_channel_resample_8(channel, cl, volume[0], left_accum, dst_len, src, src_len);
 		/* restore */
+#ifndef USE_LIBSAMPLERATE
 		channel->pivot = save_pivot;
 		channel->frac = save_frac;
+#endif
 		*src = save_src;
-		mixer_channel_resample_8(channel, channel->right, volume[1], right_accum, dst_len, src, src_len);
+		mixer_channel_resample_8(channel, cr, volume[1], right_accum, dst_len, src, src_len);
 	}
 
 	channel->samples_available += count;
@@ -538,21 +684,33 @@ static unsigned mixer_channel_resample_16_pan(struct mixer_channel_data *channel
 	}
 #endif
 
+#ifdef USE_LIBSAMPLERATE
+	SRC_STATE *cl = channel->src_left;
+	SRC_STATE *cr = channel->src_right;
+#else
+	filter_state *cl = channel->left;
+	filter_state *cr = channel->right;
+#endif
+
 	if (!is_stereo || channel->pan == MIXER_PAN_LEFT) {
-		count = mixer_channel_resample_16(channel, channel->left, volume[0], left_accum, dst_len, src, src_len);
+		count = mixer_channel_resample_16(channel, cl, volume[0], left_accum, dst_len, src, src_len);
 	} else if (channel->pan == MIXER_PAN_RIGHT) {
-		count = mixer_channel_resample_16(channel, channel->right, volume[1], right_accum, dst_len, src, src_len);
+		count = mixer_channel_resample_16(channel, cr, volume[1], right_accum, dst_len, src, src_len);
 	} else {
 		/* save */
+#ifndef USE_LIBSAMPLERATE
 		unsigned save_pivot = channel->pivot;
 		unsigned save_frac = channel->frac;
+#endif
 		INT16* save_src = *src;
-		count = mixer_channel_resample_16(channel, channel->left, volume[0], left_accum, dst_len, src, src_len);
+		count = mixer_channel_resample_16(channel, cl, volume[0], left_accum, dst_len, src, src_len);
 		/* restore */
+#ifndef USE_LIBSAMPLERATE
 		channel->pivot = save_pivot;
 		channel->frac = save_frac;
+#endif
 		*src = save_src;
-		mixer_channel_resample_16(channel, channel->right, volume[1], right_accum, dst_len, src, src_len);
+		mixer_channel_resample_16(channel, cr, volume[1], right_accum, dst_len, src, src_len);
 	}
 
 	channel->samples_available += count;
@@ -703,6 +861,9 @@ int mixer_sh_start(void)
 	struct mixer_channel_data *channel;
 	int i;
 	int r;
+#ifdef USE_LIBSAMPLERATE
+	int error;
+#endif
 
 	/* reset all channels to their defaults */
 	memset(&mixer_channel, 0, sizeof(mixer_channel));
@@ -713,8 +874,13 @@ int mixer_sh_start(void)
 		channel->config_mixing_level 			= config_mixing_level[i];
 		channel->config_default_mixing_level 	= config_default_mixing_level[i];
 
+#ifdef USE_LIBSAMPLERATE
+		channel->src_left  = src_new(SRC_SINC_MEDIUM_QUALITY, 1, &error); //!! if changing quality, change src_sinc_opt again to include the other two tables (search for //!! there)
+		channel->src_right = src_new(SRC_SINC_MEDIUM_QUALITY, 1, &error);
+#else
 		channel->left = filter_state_alloc();
 		channel->right = filter_state_alloc();
+#endif
 	}
 
 	/* determine if we're playing in stereo or not */
@@ -751,10 +917,15 @@ void mixer_sh_stop(void)
 
 	for (i = 0, channel = mixer_channel; i < MIXER_MAX_CHANNELS; i++, channel++)
 	{
+#ifdef USE_LIBSAMPLERATE
+		src_delete(channel->src_left);
+		src_delete(channel->src_right);
+#else
 		if (channel->filter)
 			filter_free(channel->filter);
 		filter_state_free(channel->left);
 		filter_state_free(channel->right);
+#endif
 	}
 }
 
@@ -1158,7 +1329,11 @@ void mixer_play_streamed_sample_16(int ch, INT16 *data, int len, int freq)
 		mixing_volume[1] = 0;
 	}
 
-	mixer_channel_resample_set(channel,freq,channel->request_lowpass_frequency,0);
+	mixer_channel_resample_set(channel,freq,
+#ifndef USE_LIBSAMPLERATE
+		channel->request_lowpass_frequency,
+#endif
+		0);
 
 	/* compute the length in fractional form */
 	len = len / 2; /* convert len from byte to word */
@@ -1207,7 +1382,11 @@ void mixer_play_sample(int ch, INT8 *data, int len, int freq, int loop)
 	/* update the state of this channel */
 	mixer_update_channel(channel, sound_scalebufferpos(samples_this_frame));
 
-	mixer_channel_resample_set(channel,freq,channel->request_lowpass_frequency,1);
+	mixer_channel_resample_set(channel,freq,
+#ifndef USE_LIBSAMPLERATE
+		channel->request_lowpass_frequency,
+#endif
+		1);
 
 	/* now determine where to mix it */
 	channel->data_start = data;
@@ -1236,7 +1415,11 @@ void mixer_play_sample_16(int ch, INT16 *data, int len, int freq, int loop)
 	/* update the state of this channel */
 	mixer_update_channel(channel, sound_scalebufferpos(samples_this_frame));
 
-	mixer_channel_resample_set(channel,freq,channel->request_lowpass_frequency,1);
+	mixer_channel_resample_set(channel,freq,
+#ifndef USE_LIBSAMPLERATE
+		channel->request_lowpass_frequency,
+#endif
+		1);
 
 	/* now determine where to mix it */
 	channel->data_start = data;
@@ -1294,7 +1477,11 @@ void mixer_set_sample_frequency(int ch, int freq)
 
 		mixer_update_channel(channel, sound_scalebufferpos(samples_this_frame));
 
-		mixer_channel_resample_set(channel,freq,channel->request_lowpass_frequency,0);
+		mixer_channel_resample_set(channel,freq,
+#ifndef USE_LIBSAMPLERATE
+			channel->request_lowpass_frequency,
+#endif
+			0);
 	}
 }
 
@@ -1315,9 +1502,12 @@ void mixer_set_lowpass_frequency(int ch, int freq)
 
 	assert(!channel->is_playing && !channel->is_stream);
 
-	mixerlogerror(("Mixer:mixer_set_lowpass_frequency(%s,%d)\n",channel->name,freq));
-
+#ifdef USE_LIBSAMPLERATE
+	mixerlogerror(("Mixer:mixer_set_lowpass_frequency(%s,%d) NOT supported anymore\n", channel->name, freq));
+#else
+	mixerlogerror(("Mixer:mixer_set_lowpass_frequency(%s,%d)\n", channel->name, freq));
 	channel->request_lowpass_frequency = freq;
+#endif
 }
 
 /***************************************************************************
