@@ -2,13 +2,14 @@ Version 2.8 (X X, 2016) - ""
 ------------------------------------------------------------------------------
 
 *** CORE/CPU ***
-Improve precision/performance of general sound filtering
+Improve precision/performance of general sound filtering and resampling to final output sample rate (latter using libsamplerate by Erik de Castro Lopo now)
 Improve sound pitch for old Sterns (Catacomb, Flight 2000, Freefall, Lightning, Orbitor 1, and Split Second)
 Further improved BSMT2000 sound core for Sega, Alvin G., Data East (Batman and newer), and Stern (up to Terminator 3) DMD generation games
 Further improved AT91 sound core for the rest of the Stern DMDs (Elvis, LOTR, RBION, Sopranos, Nascar/Grand Prix/Dale Jr.)
  but still one should avoid high volume levels for these machines (~24 and above, for example on Nascar)
 Slightly improved FM sound emulation cores (like AY8910, YMF262 and YM2151: so a lot of Gottlieb generations, old Ballys, pre-DCS games, etc)
 Improved HC55516 CVSD sound core (Gorgar up to Twilight Zone, etc) and add some lowpass filtering (active only on older machines) to remove some of the audible noise
+Slightly lowpass filter DCS sound core (Indiana Jones and up) to remove some of the audible noise
 Improved GTS80BS/GTS3 DAC sound core
 Improved GTS80SS DAC sound core (Haunted House, Black Hole, Mars God of War, etc)
 Improved DMD brightness level mapping for Gottlieb GTS3s
